--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@iconscout/react-unicons": "^1.1.6",
     "@mantine/core": "^4.2.12",
     "@mantine/hooks": "^4.2.12",
+    "@sanity/client": "^3.3.3",
+    "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.32.0",
     "next": "12.2.0",
     "react": "18.2.0",
@@ -28,12 +30,12 @@
   "main": "next.config.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ZainRk/Fudo-pizzashop-starter-Zainkeepscode.git"
+    "url": "git+https://github.com/alisson-roger/pizzashop.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ZainRk/Fudo-pizzashop-starter-Zainkeepscode/issues"
+    "url": "https://github.com/alisson-roger/pizzashop.git"
   },
-  "homepage": "https://github.com/ZainRk/Fudo-pizzashop-starter-Zainkeepscode#readme"
+  "homepage": "https://github.com/alisson-roger/pizzashop"
 }
